# covid-prediction-app

./: README.md  app.py  lr_model.pkl  main.py  pyproject.toml  req.txt  schema.sql
templates/: base.html  contact.html  dashboard.html  history.html  index.html  login.html  predict.html  register.html  service.html
